<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="@dimen/marginToParent"
    android:paddingEnd="@dimen/marginToParent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/request_vacation"
            style="@style/AppTheme.PrimaryTitleTextView"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="end"
            >
            <TextView
                android:id="@+id/department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:text="지주사업부"
                />
            <TextView
                android:layout_marginStart="16dp"
                android:id="@+id/rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:text="대리"
                />
            <TextView
                android:layout_marginStart="16dp"
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:text="양해리"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/remaining_vacations"
                />
            <TextView
                android:id="@+id/vacations_per_year"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:text="10"
                />
            <TextView
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/days"
                />
        </LinearLayout>

        <Spinner
            android:id="@+id/vacation_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/primaryHeight"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginToParent"
            >
            <TextView
                android:id="@+id/vacation_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vacation_period"
                android:layout_centerVertical="true"
                android:textSize="26sp"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:id="@+id/vacation_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_calendar"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/vacation_schedule"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:drawablePadding="10dp"
                tools:text="2016-04-11"/>
            <TextView
                android:id="@+id/vacation_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_calendar"
                android:layout_below="@id/vacation_start"
                android:layout_toEndOf="@id/vacation_schedule"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:drawablePadding="10dp"
                tools:text="2016-04-11"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginToParent"
            android:text="@string/vacation_reason"
            android:textSize="26sp"
            />
        <EditText
            android:id="@+id/reason"
            android:lines="3"
            android:hint="@string/enter_reason_of_vacation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/primaryHeight" />
    </LinearLayout>
    <Button
        android:id="@+id/save"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="@dimen/primaryHeight"
        android:textSize="30sp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/marginToParent"
        android:textStyle="bold"
        android:text="@string/request_approval"/>
</RelativeLayout>

